--- a/webroot/scss/palette.scss
+++ b/webroot/scss/palette.scss
@@ -15,6 +15,7 @@ $black-a25: rgba(0,0,0,.25);
 $black-a15: rgba(0,0,0,.15);
 $black-a05: rgba(0,0,0,.05);
 $white-a16: rgba(255,255,255,.16);
+$white-a25: rgba(255,255,255,.25);
 $white-a33: rgba(255,255,255,.33);
 $white-a50: rgba(255,255,255,.50);
 $white-a75: rgba(255,255,255,.75);
