--- a/webroot/scss/typography.scss
+++ b/webroot/scss/typography.scss
@@ -409,7 +409,24 @@ input { font-family : "Helvetica Neue Light Condensed", arial, sans-serif !impor
   font-size      : $orbcat-menu-title-font-size;
   line-height    : $orbcat-menu-title-font-size * 1.3;
   color          : $white;
-
+}
+span#active-orbcat-title {
+  white-space: nowrap;
+  display:inline-block;
+  width:10em;
+  overflow:hidden;
+  vertical-align: top;
+  &.condensed {
+    width:0.001em;
+    transition: background-color $global-transition-time ease-in-out,
+    background-image $global-transition-time ease-in-out,
+    color $global-transition-time ease-in-out,
+    opacity $global-transition-time ease-in-out,
+    width 0.3s ease-in-out,
+    transform $global-transition-time ease-in-out;
+  }
+  &.salient { color: $xtreme-blue; }
+  &.fade-out { opacity: 0;}
 }
 
 li.orbcat {
