--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -5148,7 +5148,7 @@ body#vendor {
   z-index: 99999; }
 
 * {
-  transition: background-color 0.3s ease-in-out, background-image 0.3s ease-in-out, color 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out; }
+  transition: background-color 0.3s ease-in-out, background-image 0.3s ease-in-out, color 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out, width 0.3s ease-in-out; }
 
 li {
   list-style-type: none !important; }
@@ -5353,6 +5353,8 @@ textarea.note {
   /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#969696', GradientType=1);
   /* IE6-9 fallback on horizontal gradient */ }
+  #monthly-content-wrapper.expanded {
+    width: 62.85em; }
   #monthly-content-wrapper.slide-down {
     transform: translateY(2000px); }
     #monthly-content-wrapper.slide-down img {
@@ -5741,16 +5743,6 @@ footer#footer {
       margin-top: 6.5%;
       height: 60%; }
 
-@-webkit-keyframes panel-stow {
-  0% {
-    transform: rotate(-90deg) translateY(23.4375rem); }
-
-  20% {
-    transform: rotate(-90deg) translateY(22.8125rem); }
-
-  100% {
-    transform: rotate(-90deg) translateY(29.6875rem); } }
-
 @-webkit-keyframes response-wait {
   0% {
     background-color: #e02027; }
@@ -6085,12 +6077,11 @@ h1.success, h2.success, h3.success, h4.success, h5.success {
   #upload-menu-form-container label {
     color: #0779be; }
 
-#delivery-time-button {
-  position: absolute;
-  width: 400px;
+.pos-tab {
+  left: 50px;
+  width: 250px;
   height: 60px;
-  left: 0px;
-  top: 400px;
+  position: absolute;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
   box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.5);
@@ -6103,18 +6094,25 @@ h1.success, h2.success, h3.success, h4.success, h5.success {
   font-size: 1.5rem;
   color: white !important;
   transform: rotate(-90deg) translateY(23.4375rem); }
-  #delivery-time-button.slide-right {
-    transform: rotate(-90deg) translateY(23.4375rem);
-    -webkit-animation: panel-stow 300ms ease-in 1 normal 0s running forwards; }
+  .pos-tab.slide-right {
+    transform: rotate(-90deg) translateY(28.125rem); }
 
-#delivery-times {
+#order-history-button {
+  top: 290px; }
+
+#delivery-time-button {
+  top: 565px; }
+
+.tab-panel {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); }
-  #delivery-times .container {
+  .tab-panel .content-box {
+    height: 665px; }
+  .tab-panel .container {
     position: absolute;
     top: 6.875rem;
     left: 50px;
@@ -6124,30 +6122,54 @@ h1.success, h2.success, h3.success, h4.success, h5.success {
     background-color: white;
     border: 2px solid #373737;
     border-radius: 1rem; }
-    #delivery-times .container ul {
+    .tab-panel .container ul {
       margin-top: 0.9375rem; }
-    #delivery-times .container li.delivery-time:first-of-type h1 {
+    .tab-panel .container li.delivery-time:first-of-type h1 {
       border-top-left-radius: 1rem;
       border-top-right-radius: 1rem; }
-    #delivery-times .container li.delivery-time:last-of-type h1 {
+    .tab-panel .container li.delivery-time:last-of-type h1 {
       border-bottom-left-radius: 1rem;
       border-bottom-right-radius: 1rem; }
-    #delivery-times .container li.delivery-time h1 {
+    .tab-panel .container li.delivery-time h1 {
       display: block;
       box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
       min-width: 446px !important;
       font-size: 3.75rem;
       line-height: 10rem;
       text-align: center; }
-    #delivery-times .container li.delivery-time.active h1 {
+    .tab-panel .container li.delivery-time.active h1 {
       background-color: #faea06;
       color: black !important; }
-    #delivery-times .container li.delivery-time.inactive h1 {
+    .tab-panel .container li.delivery-time.inactive h1 {
       background-color: #0779be;
       color: white; }
-    #delivery-times .container a.cancel {
+    .tab-panel .container a.bottom-rounded {
       border-bottom-left-radius: 1rem;
       border-bottom-right-radius: 1rem; }
+    .tab-panel .container a.bottom-anchored {
+      position: absolute;
+      width: 465px;
+      bottom: 1rem; }
+  .tab-panel table {
+    color: #373737;
+    border-spacing: 0;
+    width: 100%; }
+    .tab-panel table thead {
+      text-transform: uppercase; }
+      .tab-panel table thead tr {
+        background-color: #373737 !important;
+        color: white; }
+        .tab-panel table thead tr th {
+          padding-top: 5px;
+          border-bottom: 3px solid white; }
+    .tab-panel table tr:nth-of-type(odd) {
+      background-color: #eeeeee; }
+    .tab-panel table td {
+      font-family: "Helvetica Neue Medium Condensed", arial, sans-serif; }
+    .tab-panel table span.icon-green {
+      color: #43ac6a; }
+    .tab-panel table span.icon-red {
+      color: #e02027; }
 
 div#loading-img {
   position: fixed;
@@ -6157,6 +6179,22 @@ div#loading-img {
   height: 1200px;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 11; }
+
+#polling-button {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  color: white;
+  background-color: #191919;
+  z-index: 9999999999;
+  border: 2px solid white;
+  padding: 8px; }
+  #polling-button.active {
+    background-color: #faea06;
+    color: #191919; }
+  #polling-button:hover {
+    background-color: #b4b4b4;
+    color: #e02027; }
 
 @-webkit-keyframes modal_loading_dots {
   0% {
@@ -7112,6 +7150,10 @@ ul#orbcat-menu {
     -ms-transform: translate(2000px, 0);
     -o-transform: translate(2000px, 0);
     transform: translate(2000px, 0); }
+  ul#orbcat-menu.condensed {
+    width: 3rem; }
+    ul#orbcat-menu.condensed li {
+      display: none; }
 
 li.orbcat {
   height: 4.45312rem;
