--- a/webroot/scss/vendor.scss
+++ b/webroot/scss/vendor.scss
@@ -584,7 +584,7 @@ li.sysvar {
   background-color:$white;
   padding:1rem;
   width:800px;
-  box-shadow: 0 0 0.5rem rgba(0,0,0,.5);
+  box-shadow: 0 0 1rem rgba(0,0,0,.75);
    border: 1px solid $medium-grey;
    border-radius: $global-radius;
   &.pricing {
@@ -710,13 +710,28 @@ ul.inline {
   }
 }
 
+span.config-label {
+  font-size:16px;
+  display:inline-block;
+  padding-top:0.5em;
+  &.disabled {
+    color: $very-light-grey;
+  }
+}
 span.select-choice {
   font-size: 18px;
-    width: 100%;
-    display: inline-block;
-    padding-top: .5em;
-    text-align: center;
+  width: 100%;
+  display: inline-block;
+  text-align: center;
+  color: $xtreme-blue;
+  padding-top:0.5em;
   &:hover {
     color:$xtreme-red;
   }
+}
+
+select.multiselect {
+  height:auto;
+  min-height:12rem;
+  max-height:18rem;
 }
